--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script src="https://cdn.tiny.cloud/1/k1kgs8qmzd0isvug3s4btubgrps7yutyhiy7jbsi038go8sq/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
