--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,5 +40,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script defer>history.scrollRestoration = "manual"</script>
+  <script defer>
+    history.scrollRestoration = "manual";
+  </script>
 </html>
